syntax = "proto3";

package gen.common;
option go_package = "github.com/galexrt/arpanet/proto/common";

import "validate/validate.proto";

message Character {
    int32 userID = 1 [(validate.rules).int32.gt = 0];
    string identifier = 2;
    string job = 3;
    int32 jobGrade = 4;
    string firstname = 5;
    string lastname = 6;
    string dateofbirth = 7;
    string sex = 8;
    string height = 9;
    int64 visum = 10;
    int64 playtime = 11;

    Props props = 12;
    repeated License licenses = 13;
}

message License {
    string name = 1;
}

message Props {
    bool wanted = 1;
}

message ShortCharacter {
    int32 userID = 1 [(validate.rules).int32.gt = 0];
    string identifier = 2;
    string job = 3;
    int32 jobGrade = 4;
    string firstname = 5;
    string lastname = 6;
}
