syntax = "proto3";

package gen.completion;
option go_package = "github.com/galexrt/arpanet/proto/completion";

message Job {
    string name = 1; // @gotags: sql:"primary_key" alias:"name"
    string label = 2; // @gotags: alias:"label"
    repeated JobGrade grades = 3;
}

message JobGrade {
    string job = 1; // @gotags: sql:"primary_key" alias:"job_name"
    int32 grade = 2; // @gotags: alias:"grade"
    string label = 3; // @gotags: alias:"label"
}

message CompleteJobNamesRequest {
    bool withGrades = 1;
}

message CompleteJobNamesResponse {
    repeated Job jobs = 1;
}

message CompleteJobGradesRequest {
    string job = 1;
}

message CompleteJobGradesResponse {
    repeated JobGrade ranks = 1;
}

service CompletionService {
    rpc CompleteJobNames(CompleteJobNamesRequest) returns (CompleteJobNamesResponse);
    rpc CompleteJobGrades(CompleteJobGradesRequest) returns (CompleteJobGradesResponse);
}
