syntax = "proto3";

package services.completor;
option go_package = "github.com/galexrt/fivenet/gen/go/proto/services/completor;completor";

import "resources/documents/category.proto";
import "resources/jobs/jobs.proto";
import "resources/users/users.proto";
import "validate/validate.proto";

message CompleteCitizensRequest {
  string search = 1 [(validate.rules).string.max_len = 50];
}

message CompleteCitizensRespoonse {
  repeated resources.users.UserShort users = 1; // @gotags: alias:"user"
}

message CompleteJobsRequest {
  optional string search = 1 [(validate.rules).string.max_len = 50];
  bool exact_match = 2;
  bool current_job = 3;
}

message CompleteJobsResponse {
  repeated resources.jobs.Job jobs = 1;
}

message CompleteDocumentCategoriesRequest {
  string search = 1 [(validate.rules).string.max_len = 128];
}

message CompleteDocumentCategoriesResponse {
  repeated resources.documents.DocumentCategory categories = 1;
}

service CompletorService {
  // @perm: description="Complete Citizen Names"
  rpc CompleteCitizens(CompleteCitizensRequest) returns (CompleteCitizensRespoonse);
  rpc CompleteJobs(CompleteJobsRequest) returns (CompleteJobsResponse);
  // @perm: PerJob=true;description="Complete a Jobs Document Categories"
  rpc CompleteDocumentCategories(CompleteDocumentCategoriesRequest) returns (CompleteDocumentCategoriesResponse);
}
